adds a lander and expands mimetypes

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,3 +1,6 @@
+htdocs /home/static
+index.html
+index.htm
 .html:text/html
 .htm:text/html
 .css:text/css
@@ -19,7 +22,6 @@
 .woff2:font/woff2
 .ttf:font/ttf
 .otf:font/otf
-.eot:application/vnd.ms-fontobject
 .mp3:audio/mpeg
 .wav:audio/wav
 .ogg:audio/ogg
@@ -36,19 +38,3 @@
 .gz:application/gzip
 .rar:application/vnd.rar
 .7z:application/x-7z-compressed
-.doc:application/msword
-.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document
-.xls:application/vnd.ms-excel
-.xlsx:application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
-.ppt:application/vnd.ms-powerpoint
-.pptx:application/vnd.openxmlformats-officedocument.presentationml.presentation
-.epub:application/epub+zip
-.azw:application/vnd.amazon.ebook
-.mobi:application/x-mobipocket-ebook
-.apk:application/vnd.android.package-archive
-.bin:application/octet-stream
-.dmg:application/x-apple-diskimage
-.exe:application/vnd.microsoft.portable-executable
-.iso:application/x-iso9660-image
-.sh:application/x-sh
-.bat:application/x-msdownload
